# nata

./: 1.py  README.md  main.py  pyproject.toml
src/: functions.py  parser.py  vacancy.py  work_with_file.py
