[tool.poetry]
name = "kyrsovaiy4"
version = "0.1.0"
description = ""
authors = ["Titov Evgenii <dlakoska@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
